add btn redirect fix

--- a/lesson9 - toDoList/index.html
+++ b/lesson9 - toDoList/index.html
@@ -17,7 +17,7 @@
             <h1>Keep</h1>
             <form action="#">
                 <input id="newTaskInput" value="" placeholder="New task">
-                <button id="addBtn">Add</button>
+                <button type="submit" id="addBtn">Add</button>
             </form>
         </div>
         <div id="listBody" class="body">
