--- a/lesson15_contact-list/index.html
+++ b/lesson15_contact-list/index.html
@@ -9,42 +9,6 @@
     <script src="script.js" async></script>
 </head>
 <body>
-
-    <!-- <table id="myContacts" class="contact-list-table">
-        <thead>
-            <tr>
-                <th>Name</th>
-                <th>Surname</th>
-                <th>T-phone</th>
-                <th>-</th>
-            </tr>
-        </thead>
-        <tbody>
-            <tr>
-                <td>Ivan</td>
-                <td>Ivanov</td>
-                <td>+39035343242</td>
-                <td>x</td>
-            </tr>
-        </tbody>
-        <tfoot>
-            <tr>
-                <td>
-                    <input type="text" name="name" id="inputName" placeholder="Ivan">
-                </td>
-                <td>
-                    <input type="text" name="surname" id="inputSurname" placeholder="Ivanov">
-                </td>
-                <td>
-                    <input type="text" name="tphone" id="inputSurname" placeholder="+38(066)123-45-67">                    
-                </td>
-                <td>Add</td>
-            </tr>
-        </tfoot>
-    </table>
-     -->
-    <table id="xx">
-
-    </table>
+    <table id="xx"></table>
 </body>
 </html>
