--- a/lesson16_ajax-gallery/index.html
+++ b/lesson16_ajax-gallery/index.html
@@ -10,9 +10,8 @@
 </head>
 <body>
     <div id="container" class="container">
-        <div class="gallery">
-        </div>
-        <div class="background"></div>
+        <div class="gallery"></div>
+        <div class="background">s</div>
         <div class="full-image">
             <img src="" alt="">
         </div>
