--- a/lesson16_ajax-gallery/index.html
+++ b/lesson16_ajax-gallery/index.html
@@ -14,6 +14,7 @@
         <div class="background">s</div>
         <div class="full-image">
             <img src="" alt="">
+            <button class="closeBtn">X</button>
         </div>
     </div>
     <script type="text/template" id="imgTemp">
