--- a/lesson16_ajax-gallery/index.html
+++ b/lesson16_ajax-gallery/index.html
@@ -18,7 +18,7 @@
         </div>
     </div>
     <script type="text/template" id="imgTemp">
-        <img src="{{thumbURL}}" alt="{{title}}" data-full-url="{{fullURL}}" data-index="{{index}}">
+        <img src="{{thumbURL}}" alt="{{title}}" data-full-url="{{fullURL}}" data-index="{{index}}" class="gallery-img">
     </script>
 </body>
 </html>
