--- a/lesson17_ajax-contact-list/index.html
+++ b/lesson17_ajax-contact-list/index.html
@@ -9,30 +9,34 @@
     <script src="script.js" async></script>
 </head>
 <body>
-    <div id="list-short">
-        <ul>
-            
-        </ul>
+    <div id="container" class="container">
+        <div id="sidebar">
+            <ul></ul>
+        </div>
+        <div id="main" class="main">
+
+        </div>
     </div>
-    <script type="text/template" id="shortContactTemplate">
+    <script type="text/template" id="sidebarUser">
         <li data-user-id="{{id}}">{{name}}</li>
     </script>
-    <script type="text/template" id="fullContactTemplate">
-        <li data-user-id="{{id}}"
-            data-address-city="{{city}}"
-            data-address-street="{{street}}"
-            data-address-suite="{{suite}}"
-            data-address-zipcode="{{zipcode}}"
-            data-address-geo-lat="{{lat}}"
-            data-address-geo-lng="{{lng}}"
-            data-company-bs="{{bs}}"
-            data-company-catchphrase="{{catchphrase}}"
-            data-company-name="{{companyName}}"
-            data-email="{{email}}"
-            data-id="{{id}}"
-            data-phone="{{phone}}"
-            data-username="{{username}}}"
-            data-website="{{website}}}">{{name}}</li>
+    <script type="text/template" id="fullUserName">
+        <h1>{{name}}</h1>
+        <h2>Address:</h2>
+        <p>City - {{city}}<br>
+        Street - {{street}}<br>
+        Suite - {{suite}}<br>
+        Zipcode - {{zipcode}}<br>
+        Geo - lat({{lat}}) / lng({{lng}})</p>
+        <h2>Company:</h2>
+        <p>Name - {{companyname}}<br>
+        Cathcphrase - {{catchphrase}}<br>
+        BS - {{bs}}</p>
+        <h2>Other:</h2>
+        <p>Email - {{email}}<br>
+        Phone - {{phone}}<br>
+        Username - {{username}}<br>
+        Website - {{website}}</p>
     </script>
 </body>
 </html>
