--- a/lesson18_ajax-contact-list2/index.html
+++ b/lesson18_ajax-contact-list2/index.html
@@ -10,9 +10,9 @@
 </head>
 <body>
     <div id="container" class="container">
-        <div id="sidebar">
-            <ul></ul>
-            <button id="newContactBtn">New contact</button>
+        <div id="sidebar" class="sidebar">
+            <ul id="sidebar-list" class="sidebar-list"></ul>
+            <button id="newContactBtn" class="new-button">New contact</button>
         </div>
         <div id="main" class="form-container">
             <button class="remove-button">X</button>
@@ -28,10 +28,11 @@
                 <label for="name">Email:</label>
                 <input type="text" name="email" id="email" value="" disabled>
             </form>
+            <button class="save-button hidden">Save changes</button>
         </div>
     </div>
     <script type="text/template" id="sidebarUser">
-        <li data-user-id="{{id}}">{{name}}</li>
+        <li data-user-id="{{id}}" class="sidebar-user">{{name}}</li>
     </script>
     <script type="text/template" id="saveChangesBtn">
         <button class="save-button">Save changes</button>
