--- a/lesson19_gallery-v3/index.html
+++ b/lesson19_gallery-v3/index.html
@@ -10,25 +10,30 @@
 </head>
 <body>
     <div id="container" class="container">
+        <select id="amount-filter">
+            <option value="10">10</option>
+            <option value="20">20</option>
+            <option value="30">30</option>
+            <option value="40">40</option>
+            <option value="50">50</option>
+        </select>
         <div id="gallery" class="gallery"></div>
         <div id="background" class="background">s</div>
         <div id="full-image" class="full-image">
             <img src="" alt="">
             <button id="closeBtn" class="closeBtn">X</button>
         </div>
-        <div class="pagination-container">
-            <ul id="pagination-list" class="page-list">
-
-            </ul>
+            <div id="pagination-container" class="page-list">
+                
+            </div>
         </div>
-    </div>
     <script type="text/template" id="imgTemp">
         <div>
             <img src="{{thumbURL}}" alt="{{title}}" data-full-url="{{fullURL}}" data-index="{{index}}" class="gallery-img">
         </div>
     </script>
     <script type="text/template" id="pageTemp">
-        <li data-page-id="{{id}}" class="page">{{value}}</li>
+        <span data-page-id="{{id}}" class="page">{{value}}</span>
     </script>
 </body>
 </html>
