--- a/lesson20_sticker-board/index.html
+++ b/lesson20_sticker-board/index.html
@@ -23,8 +23,8 @@
     <script type="text/template" id="sticker-template">
         <div class="sticker-item" data-sticker-id="{{id}}">
             <form action="">
-                <input disabled type="text" value="{{title}}" data-elem-type="stickerTitle">
-                <textarea rows="8"readonly data-elem-type="stickerBody">{{body}}</textarea>
+                <input disabled type="text" value="{{title}}">
+                <textarea rows="8" readonly>{{body}}</textarea>
             </form>
             <button type="button" class="remove-button sticker-buttons">Del</button>
             <button type="button" class="edit-button sticker-buttons">Edit</button>
