--- a/lesson16_ajax-gallery/index.html
+++ b/lesson16_ajax-gallery/index.html
@@ -10,15 +10,17 @@
 </head>
 <body>
     <div id="container" class="container">
-        <div class="gallery"></div>
-        <div class="background">s</div>
-        <div class="full-image">
+        <div id="gallery" class="gallery"></div>
+        <div id="background" class="background">s</div>
+        <div id="full-image" class="full-image">
             <img src="" alt="">
-            <button class="closeBtn">X</button>
+            <button id="closeBtn" class="closeBtn">X</button>
         </div>
     </div>
     <script type="text/template" id="imgTemp">
-        <img src="{{thumbURL}}" alt="{{title}}" data-full-url="{{fullURL}}" data-index="{{index}}" class="gallery-img">
+        <div>
+            <img src="{{thumbURL}}" alt="{{title}}" data-full-url="{{fullURL}}" data-index="{{index}}" class="gallery-img">
+        </div>
     </script>
 </body>
 </html>
