--- a/lesson20_sticker-board/index.html
+++ b/lesson20_sticker-board/index.html
@@ -7,7 +7,7 @@
     <title>Board</title>
     <link rel="stylesheet" href="style.css">
     <script src="script.js" async></script>
-
+    <link href="https://fonts.googleapis.com/css?family=Kalam:400,700&display=swap" rel="stylesheet">
 </head>
 <body>
     <div id="main-container">
