--- a/lesson20_sticker-board/index.html
+++ b/lesson20_sticker-board/index.html
@@ -26,7 +26,7 @@
                 <input disabled type="text" value="{{title}}">
                 <textarea rows="8" readonly>{{body}}</textarea>
             </form>
-            <button type="button" class="remove-button sticker-buttons">Del</button>
+            <button type="button" class="remove-button sticker-buttons">Done</button>
             <button type="button" class="edit-button sticker-buttons">Edit</button>
         </div>
     </script>
