--- a/lesson20_sticker-board/index.html
+++ b/lesson20_sticker-board/index.html
@@ -24,7 +24,7 @@
         <div class="sticker-item" data-sticker-id="{{id}}">
             <form action="">
                 <input disabled type="text" value="{{title}}">
-                <textarea rows="8" readonly>{{body}}</textarea>
+                <textarea readonly rows="8">{{body}}</textarea>
             </form>
             <button type="button" class="remove-button sticker-buttons">Done</button>
             <button type="button" class="edit-button sticker-buttons">Edit</button>
